# ApiScan-Ai

./: .gitignore  LICENSE  Launch_App.bat  README.ar.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
